syntax = "proto3";

package pb;

option go_package = "github.com/yijia-cc/grouplive/proto/pb";
option java_package = "info.grouplive.proto";

service AuthenticationService {
    rpc VerifyIdentity(VerifyIdentityRequest) returns (VerifyIdentityResponse);
}

service AuthorizationService {
    rpc HasPermission(HasPermissionRequest) returns (HasPermissionResponse);
}

service UserService {
    rpc GetUser(GetUserRequest) returns (User);
}

message VerifyIdentityRequest {
    string auth_token = 1;
}

message VerifyIdentityResponse {
    string user_id = 1;
}

message HasPermissionRequest {
    string user_id = 1;
    string permission_id = 2;
    string resource_type_id = 3;
    string resource_id = 4;
}

message HasPermissionResponse {
    bool has_permission = 1;
}

message GetUserRequest {
    string user_id = 1;
}

message User {
    string id = 1;
    string username = 2;
    optional string lastname = 3;
    optional string firstname = 4;
    optional string email = 5;
    optional string phone = 6;
    Unit unit = 7;
}

message Unit {
    string address = 1;
    string apt_number = 2;
}